crates/internal/brink-ide/tests/snapshots/line_context_snapshots__choice_bracket_inline_alternatives.snap
---
source: crates/internal/brink-ide/tests/line_context_snapshots.rs
expression: "render_fixture(\"\\\n=== start ===\n* [Take the {red|blue} pill]\n* [Take the {big|small} dose]\n-> END\n\")"
---
== LINES (base) ==
  0 |=== start ===| KnotHeader w=0/TopLevel
  1 |* [Take the {red|blue} pill]| Choice w=1/ChoiceLine(sticky=false)
  2 |* [Take the {big|small} dose]| Choice w=1/ChoiceLine(sticky=false)
  3 |-> END| Divert w=1/ChoiceBody
  4 || Blank w=0/TopLevel
== LINES (at-cue dialect) ==
  0 |=== start ===| KnotHeader w=0/TopLevel
  1 |* [Take the {red|blue} pill]| Choice w=1/ChoiceLine(sticky=false)
  2 |* [Take the {big|small} dose]| Choice w=1/ChoiceLine(sticky=false)
  3 |-> END| Divert w=1/ChoiceBody
  4 || Blank w=0/TopLevel
== STRUCTURAL FOLDS ==
2..3 from_start=false kind=Structural text=None
0..3 from_start=false kind=Structural text=None
== RUNS (base) ==
== RUNS (at-cue dialect) ==
